Stop the wikidata logo from being too big

--- a/2017/assets/sass/_sections.scss
+++ b/2017/assets/sass/_sections.scss
@@ -306,6 +306,9 @@
 .wikidata-logo {
   display: block;
   margin: 0 auto;
+  @media (min-width: $large-screen) {
+    max-width: 250px;
+  }
 }
 
 .section--iran {
